--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,14 +4,36 @@
   padding: 60px 0;
   color: white;
   background-color: rgb(27, 26, 26);
+
+  .resume_dow_btn{
+    margin-top: 2%;
+    margin-left: 10%;
+    width: 50%;
+    height: 50%;
+    align-items: center;
+  }
+  .button-link {
+    background-color: $main-color;
+    border: 2px solid $main-color;
+    padding: 8px 20px;
+    cursor: pointer;
+    font-size: 1.8rem;
+    color: black;
+    p{
+     font-weight: 800;
+    }
+  }
+  .button-link:hover {
+    border: 2px solid $main-color;
+    background-color: transparent;
+    color: white;
+  }
+
 }
 p{
   text-align: center;
 }
-.resume_dow_btn{
-  margin-top: 10%;
-  margin-left: 30%;
-}
+
 .about_box_li{
   margin-top: 5%;
 }
