fix other intrest padding , project box size , add yt link

--- a/src/components/about/eduWorkBox.scss
+++ b/src/components/about/eduWorkBox.scss
@@ -2,25 +2,23 @@
 
 
 
-.team__box {
+.eduWork_Box {
   max-width: max-content;
   height: max-content;
-  margin: 0 0;
+  margin: 0 auto;
   margin-top: 10%;
   display: flex;
   cursor: pointer;
-  // position: relative;
-  // align-items: center;
 
   .institute-round-image{
     // position: relative ;
     // display: flex;
     align-items: center;
     margin: auto;
-    width: 50%;
+    width: max-content;
     }
 
-  .team__box-info {
+  .eduWork_Box_info {
     width: 100%;
     display:relative ;
     margin: auto;
@@ -41,12 +39,12 @@
 }
 
 @media screen and (min-width: 990px) {
-  .team__box{
+  .eduWork_Box{
     padding: auto;
     margin-top: 4%;
     align-items: center;
 
-    .team__box-info{
+    .eduWork_Box_info{
       p{
         width: max-content;
         font-size: 30px;
