--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,8 +6,8 @@
   background-color: rgb(27, 26, 26);
 
   .resume_dow_btn{
-    margin-top: 2%;
-    margin-left: 10%;
+    margin-top: 5%;
+    margin-left: 25%;
     width: 50%;
     height: 50%;
     align-items: center;
@@ -60,12 +60,13 @@ p{
   font-size: 16px;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
   #about {
     text-align: center;
   }
   .resume_dow_btn{
-    margin-top: 5%;
+    margin-top: 5%;    
+    margin-left: 25%;
   }
   .about_box_title{
     text-align: center;
