--- a/src/components/projects/projectsBox.scss
+++ b/src/components/projects/projectsBox.scss
@@ -1,22 +1,22 @@
 @import '../../style/App.scss';
 
-.blog__box {
+.project__box {
  
   // width: 100%;
-  width: 320px;
-  height: min-content;
+  width: max-content;
+  height: max-content;
   position: relative;
   margin: 20px auto;
-  padding: 2%;
+  padding: 4%;
   border-radius: 10px;
   color: #000;
   // border: 4px solid $main-color;
  background-color: $white-color;
   
 
-  .blog__image {
-    width: 300px;
-    height: 300px;
+  .project__image {
+    width: 250px;
+    height: 250px;
     position: relative;
     border-radius: 10px;
 
@@ -24,10 +24,11 @@
       width: 100%;
       height: 100%;
       position: absolute;
+      border-radius: 10px;
       background-color: black;
     }
 
-    .blog__hover {
+    .project__hover {
       cursor: pointer;
       transition: 0.3s ease;
       background-color: rgba($main-color, 0.8);
@@ -40,17 +41,18 @@
     }
   }
 
-  .blog__image:hover {
-    .blog__hover {
+  .project__image:hover {
+    .project__hover {
       opacity: 1;
     }
   }
 
-  .blog__info {
-    padding-top: 15%;
+  .project__info {
+    align-items: center;
+    padding-top: 5%;
     padding-bottom: 8%;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-left: 4%;
+    padding-right: 4%;
 
     h4 {
       text-transform: uppercase;
@@ -63,10 +65,10 @@
 }
 
 @media screen and (max-width: 990px) {
-  .blog__box {
+  .project__box {
     width: 250px;
-    .blog__image {
-      width: 240px;
+    .project__image {
+      width: 230px;
       height: 240px;
     }
 
