Send Email is now working

--- a/src/components/contact-modal/modal.scss
+++ b/src/components/contact-modal/modal.scss
@@ -57,6 +57,7 @@
       .modal__btn {
         background-color: $main-color;
         padding: 10px 25px;
+        margin-top: 4%;
         border-radius: 10px;
         cursor: pointer;
 
