--- a/src/components/events/eventSwiper.scss
+++ b/src/components/events/eventSwiper.scss
@@ -5,12 +5,11 @@
 }
 .event-container{
   height: 420px;
-  margin: 0,0;
+  margin: 0 auto;
   margin-top: 60px;
-  position: relative;
+  position: sticky;
   border: 4px solid $light-color;
   padding: 10px;
-  margin-bottom: 40px;
-
+  margin-bottom: 60px;
 }
 
