--- a/src/components/contact/contactInfo/contactSocial.scss
+++ b/src/components/contact/contactInfo/contactSocial.scss
@@ -5,7 +5,7 @@
   color: white;
   padding-top: 3%;
   padding-bottom: 2%;
-  background-color: #1b1a1a;
+  background-color: $bg-color;
 }
 
 .contact__social {
