--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -326,6 +326,27 @@ p {
   display: none;
 }
 
+.cardDiv{
+  background-color:$bg-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+    .card{
+      height: 10%;
+      width: max-content;
+      border-radius: 5%;
+      background-color: $main-color;
+      padding: 15px 20px;
+      cursor: pointer;
+   p{
+      font-size: 2rem;
+      font-weight: 800;
+   }
+    }
+}
+
 @media screen and (max-width:500px) {
   
 }
