Third draft 31 dec 21 ( project page redesign , scroll down anim on main page , minor design changes & bug fixes )

--- a/src/components/events/eventSwiper.scss
+++ b/src/components/events/eventSwiper.scss
@@ -4,7 +4,7 @@
   background-color: rgb(27, 26, 26);
 }
 .event-container{
-  height: 420px;
+  height: fit-content;
   margin: 0 auto;
   margin-top: 60px;
   position: sticky;
