--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -9,24 +9,34 @@ p{
   text-align: center;
 }
 
+.download_cv_text{
+  margin-top: 1%;
+  display: flex;
+  text-align: left;
+}
+
 .resume_dow_btn {
   background-color: $main-color;
   border: 2px solid $main-color;
+  border-radius: 10px;
   width: min-content;
   height: min-content;
-  margin-top: 0;
-  margin-left: 30%;
+  margin-top: 2%; 
   padding: 10px 15px;
   cursor: pointer;
-  font-size: 1.4rem;
-  font-weight: 800;
-  color: black;
-  border-radius: 10%;
+  
+  p{
+    font-size: 1.4rem;
+    font-weight: 800;
+    color: black;
+  }
+  
 }
 .resume_dow_btn:hover {
-  border: 2px solid $main-color;
   background-color: transparent;
-  color:white;
+  p{
+    color:white;
+  }
 }
 
 .about_box_li{
@@ -60,8 +70,12 @@ p{
     text-align: center;
   }
   .resume_dow_btn{
-    margin-top: 8%;    
-    margin-left: 35%;
+    margin: auto;
+    margin-top: 5%;
+  }
+  .download_cv_text{
+    justify-content: center;
+    text-align: center;
   }
   .about_box_title{
     text-align: center;
