--- a/src/components/contact-modal/modal.scss
+++ b/src/components/contact-modal/modal.scss
@@ -17,10 +17,11 @@
     background-color: $black-color;
     opacity: 0.8;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    margin-top: 0%;
     z-index: 300;
     display: block;
     cursor: pointer;
@@ -39,21 +40,6 @@
       align-items: center;
       justify-content: center;
 
-      .success_msg_heading{
-        
-        text-shadow: -1px 2px 0 #000,
-                          1px 2px 0 #000,
-                          1px -1px 0 #000,
-                          -1px -1px 0 #000;
-                                       
-        p{
-          font-size: 3rem;
-          font-weight: 700;
-          color: $main-color;
-         
-        }
-      }
-
       p {
         font-size: 1.5rem;
         color: #1E1E1E;
@@ -62,7 +48,8 @@
         &:nth-child(1) {
           font-size: 3rem;
           font-weight: 700;
-          color: $main-color;
+          color: #F45C21;
+
         }
         &:nth-child(2) {
           margin: 20px 0;
