--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -15,6 +15,7 @@
   button {
     background-color: $main-color;
     border: 2px solid $main-color;
+    border-radius: 8px;
     padding: 15px 40px;
     cursor: pointer;
     font-size: 1.3rem;
@@ -30,14 +31,15 @@
 }
 
 input {
-  background-color: $light-color;
+  background-color: #29282865;
+  color: white;
   width: 100%;
   max-width: 570px;
   height: 45px;
-  border: 0px;
   padding: 0 15px;
   font-size: 15px;
   border: 2px solid $light-color;
+  border-radius: 8px;
   outline: none;
   margin: 5px 0;
 }
@@ -46,19 +48,20 @@ input:active, input:focus {
 }
 
 ::placeholder {
-  color: $black-color;
+  color: $light-color;
   font-size: 12px;
 }
 
 
 textarea {
-  background-color: $light-color;
+  background-color: #29282865;
+  color: white;
   width: 100%;
   max-width: 570px;
-  border: 0px;
   padding: 15px;
   font-size: 15px;
   border: 2px solid $light-color;
+  border-radius: 8px;
   outline: none;
   margin: 5px 0;
 }
@@ -69,7 +72,7 @@ textarea:active, textarea:focus {
 
 
 ::placeholder {
-  color: $black-color;
+  color: $light-color;
   font-size: 12px;
 }
 
