--- a/src/components/projects/projectsBox.scss
+++ b/src/components/projects/projectsBox.scss
@@ -1,75 +1,117 @@
 @import '../../style/App.scss';
 
 .project__box {
- 
-  // width: 100%;
-  width: max-content;
-  height: max-content;
+width: max-content;
   position: relative;
-  margin: 20px auto;
-  padding: 4%;
+  margin: 5% auto;
+  padding: 3%;
   border-radius: 10px;
   color: #000;
-  // border: 4px solid $main-color;
  background-color: $white-color;
-  
 
   .project__image {
-    width: 250px;
-    height: 250px;
-    position: relative;
+    width: 240px;
+    height: 240px;
+    display: flex;
+    margin-top: 5%;
+    margin-left: 10%;
+    justify-content: center;
+    background-color: #000;
     border-radius: 10px;
+
 
     img {
       width: 100%;
       height: 100%;
-      position: absolute;
+      display: block;
+      background-color: #000;
       border-radius: 10px;
-      background-color: black;
     }
 
-    .project__hover {
-      cursor: pointer;
-      transition: 0.3s ease;
-      background-color: rgba($main-color, 0.8);
-      opacity: 0;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
   }
 
-  .project__image:hover {
-    .project__hover {
-      opacity: 1;
-    }
+  .project_title {
+    text-transform: uppercase;
+    margin-top: 2%;
+    text-align :center;
+    color: $main-color;
+    background-color: $bg-color;
+    border-radius: 10px;
+    padding: 2%;
+  }
+
+  .project_details{
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-top: 3%;
   }
 
   .project__info {
     align-items: center;
-    padding-top: 5%;
-    padding-bottom: 8%;
-    padding-left: 4%;
-    padding-right: 4%;
-
-    h4 {
-      text-transform: uppercase;
-      text-align: center;
-      color: $main-color;
-      background-color: $bg-color;
-      padding: 1%;
+    padding: 3%;  
+    
+    p{
+      font-size: 1.8rem;
+      font-weight: 800;
     }
   }
+  .action-buttons-div{
+    margin: auto 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .action-button{
+    margin: 2% 5%;
+  }
+
+  
 }
+
 
 @media screen and (max-width: 990px) {
   .project__box {
-    width: 250px;
+    width: 90%;
     .project__image {
-      width: 230px;
-      height: 240px;
+      width: 250px;
+      height: 250px;
+    }
+
+  }
+
+}
+
+@media screen and (max-width: 500px) {
+  .project__box {
+    width: 90%;
+    .project__image {
+      width: 200px;
+      height: 200px;
+      margin: 3% auto;
+      margin-top: 2%;
+      margin-left: 5%;
+    }
+    .project__info {
+      align-items: center;
+      padding: 3%;  
+      
+      p{
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
+    }
+
+  }
+
+}
+
+@media screen and (max-width: 400px) {
+  .project__box {
+    margin: 3% auto;
+    padding: 1%;
+    .project__image {
+      width: 200px;
+      height: 200px;
     }
 
   }
