--- a/src/components/ui-components/button/button.scss
+++ b/src/components/ui-components/button/button.scss
@@ -9,9 +9,12 @@
     cursor: pointer;
     font-size: 1.4rem;
     font-weight: 800;
+    color: black;
+    border-radius: 10px;
   }
   .button-link:hover {
     border: 2px solid $main-color;
     background-color: transparent;
+    color: white;
   }
 }
