--- a/src/components/events/eventSwiper.scss
+++ b/src/components/events/eventSwiper.scss
@@ -9,7 +9,7 @@
   margin-top: 60px;
   position: sticky;
   border: 4px solid $light-color;
-  padding: 10px;
+  padding: 5px 5px;
   margin-bottom: 60px;
 }
 
