--- a/src/components/skills/skillsBox/skillsBox.scss
+++ b/src/components/skills/skillsBox/skillsBox.scss
@@ -2,7 +2,7 @@
   
   .skills__box {
     position: relative;
-    max-width: 280px;
+    max-width: 250px;
     height: 300px;
     margin: 5% auto;
     cursor: pointer;
@@ -27,30 +27,13 @@
       color:$main-color;
     }
 
-    .skills__hover-info {
-      background-color: rgba($main-color, 0.8);
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transition: 0.3s ease;
-      
-      p {
-        text-transform: uppercase;
-      }
-    }
-    .skills__hover-info:hover {
-      opacity: 1;
-    }
   }
 
   @media screen and (max-width: 990px) {
 
     .skills__box {
       position: relative;
-      max-width: 200px;
+      max-width: 1800px;
       height: auto;
       margin: 10% auto;
       cursor: pointer;
@@ -58,7 +41,8 @@
       border-radius: 15px;
       border: 2px solid $main-color;
       img {
-        width: 180px;
+        width: 95%;
+        margin: auto;
         height: auto;
         border-radius: 15px;
         box-shadow: 2px 2px 4px rgb(185, 179, 179);
