--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,7 +1,6 @@
 @import '../../style/App.scss';
 
 #about {
-  width: 1400ox;
   padding: 60px 0;
   color: white;
 }
@@ -16,28 +15,52 @@ p{
 }
 
 .resume_dow_btn {
+    width: min-content;
+  height: min-content;
+  margin-top: 2%;
   background-color: $main-color;
   border: 2px solid $main-color;
-  border-radius: 10px;
-  width: min-content;
-  height: min-content;
-  margin-top: 2%; 
-  padding: 10px 15px;
+  padding: 15px 30px;
   cursor: pointer;
+  border-radius: 10px;
   
-  p{
+  a{
     font-size: 1.4rem;
     font-weight: 800;
     color: black;
   }
-  
 }
 .resume_dow_btn:hover {
+  border: 2px solid $main-color;
   background-color: transparent;
-  p{
-    color:white;
-  }
+    a{
+      color: white;
+    }
 }
+
+// .resume_dow_btn {
+//   background-color: $main-color;
+//   border: 2px solid $main-color;
+//   border-radius: 10px;
+//   width: min-content;
+//   height: min-content;
+//   margin-top: 2%; 
+//   padding: 10px 15px;
+//   cursor: pointer;
+  
+//   a{
+//     font-size: 1.4rem;
+//     font-weight: 800;
+//     color: black;
+//   }
+  
+// }
+// .resume_dow_btn:hover {
+//   background-color: transparent;
+//   a{
+//     color:white;
+//   }
+// }
 
 .about_box_li{
   margin-top: 5%;
@@ -68,6 +91,7 @@ p{
 
 .other-intrest-sec{
   padding: 0% 5%;
+  margin: 7% 0%;
 }
 
 @media screen and (max-width: 500px) {
