--- a/src/components/contact-modal/modal.scss
+++ b/src/components/contact-modal/modal.scss
@@ -75,7 +75,6 @@
   div {
     z-index: 400;
     .error__modal {
-      margin: 5px;
       background-color: $white-color;
       z-index: 500;
       padding: 30px;
@@ -95,13 +94,16 @@
           font-size: 3rem;
           font-weight: 700;
           color: #F45C21;
-          margin-bottom: 10px;
+          margin-bottom: 2%;
         }
         &:nth-child(2) {
-          margin: 10px 0 0 0;
+          margin: 2% 0%;
+          font-size: 2.1rem;
+          color: #1E1E1E;
+          font-weight: 800;
         }
         &:nth-child(3) {
-          margin: 20px 0;
+          margin: 2% 0;
           font-size: 2rem;
           color: #1E1E1E;
           font-weight: 700;
