--- a/src/components/events/eventSwiper.scss
+++ b/src/components/events/eventSwiper.scss
@@ -1,15 +1,19 @@
 @import '../../style/App.scss';
 
 #events {
-  background-color: rgb(27, 26, 26);
+  background-color: $bg-color;
 }
 .event-container{
   height: fit-content;
   margin: 0 auto;
-  margin-top: 60px;
   position: sticky;
   border: 4px solid $light-color;
-  padding: 5px 5px;
-  margin-bottom: 60px;
+  padding: 0.5% 1%;
+}
+@media screen and (max-width: 770px) {
+.event-container{
+  margin-top: 20%;
+  border: 2px solid $light-color;
+}
 }
 
