--- a/src/components/events/eventbox.scss
+++ b/src/components/events/eventbox.scss
@@ -21,6 +21,9 @@
   border-radius: 5%;
   border : 1px solid rgb(128, 124, 124);
   justify-content: center;
+  img{
+    border-radius: 5%; 
+  }
 }
 .event-photo:hover{
   transform: scale(0.95);
