--- a/src/components/about/eduWorkBox.scss
+++ b/src/components/about/eduWorkBox.scss
@@ -1,7 +1,5 @@
 @import '../../style/App.scss';
 
-
-
 .eduWork_Box {
   max-width: max-content;
   height: max-content;
@@ -25,15 +23,13 @@
     text-align: center;
     align-items: center;
     margin-top: 5px;    
+    color: $white-color;
 
     p {
-      color: $white-color;
-      margin-bottom: 10px;
-
+      margin-top: 2%;
     }
     p:nth-child(1) {
-      color: $white-color;
-      margin-top: 20px;
+      margin-top: 5%;
     }
   }
 }
@@ -47,13 +43,14 @@
     .eduWork_Box_info{
       p{
         width: max-content;
-        font-size: 30px;
+        font-size: 2.8rem;
+        margin-top: 5%;
       }
       p:nth-child(3){
-        font-size: 25px;
+        font-size: 2rem;
       }
       p:nth-child(4){
-        font-size: 23px;
+        font-size: 2rem;
       }
     }
   }
