--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,11 +1,10 @@
 @import '../../style/App.scss';
 
 .projects {
-  background-color: $light-color;
-  padding: 10px 0;
+  padding: 2%;
   color: white;
-  background-color: rgb(27, 26, 26);
-
+  background-color: $bg-color;
+  padding-bottom:5% ;
 
   .project_div{
     width: 95%;
@@ -30,48 +29,69 @@
   }
 }
 
-.more-project-div{
-  margin: 25% 30%;
+.more-project-btn{
+  width: fit-content;
+  margin: 20% 30%;
+  background-color: $main-color;
+  border-radius: 10px;
+  padding: 3% 6%;
+  border: 2px solid $main-color;
 
-   .more-project-btn{
-    background-color: #FFE600;
-    border-radius: 10px;
-    padding: 5% 10%;
-    
-     .MuiSvgIcon-root{
+  .action-button-div{
+    .action-button-title{
+      font-size: 1.8rem;
+    }
+    .MuiSvgIcon-root{
       width: 3em;
-      height: 3em;
-     }
-     .action-button-title{
-       font-size: 2rem;
-     }
-   }
+      height: 3rem;
+    }
 }
 
+}
+
+.more-project-btn:hover{
+  background-color: $bg-color;
+  border: 2px solid $main-color;
+
+.action-button-div{
+  background-color: $bg-color;
+}
+.action-button-div:hover{
+  transform: scale(1);
+}
+.action-button-title{
+  color: $white-color;
+}
+.MuiSvgIcon-root{
+  color: $white-color;
+  }
+}  
+ 
 @media screen and (max-width: 990px) {
   #projects { 
     text-align: center;
   }
+  .more-project-btn{
+    width: fit-content;
+    margin: 20% 15%;
+  } 
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .project_div{
     width: 90%;
   }
 
-  .more-project-div{
+  .more-project-btn{
     margin: 15% 15%;
-  
-     .more-project-btn{
-      padding: 2% 10%;
+    padding: 2% 10%;
 
-       .MuiSvgIcon-root{
-        width: 2.5em;
-        height: 2.5em;
-       }
-       .action-button-title{
-         font-size: 2rem;
-       }
-     }
+      .MuiSvgIcon-root{
+      width: 3rem;
+      height: 3rem;
+      }
+      .action-button-title{
+        font-size: 1.8rem;
+      }
   }
 
 }
