--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -13,10 +13,11 @@
     border-radius: 6px;
     position: absolute;
     z-index: 1;
+    border: 2px solid black;
   }
 
   .tooltip-box-position{
-    top: 40%;
+    top: 20%;
     left: 105%; 
   }
   
@@ -29,7 +30,7 @@
     margin-top: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: transparent white transparent transparent;
+    border-color: transparent black transparent transparent;
   }
 
   .tooltip-arrow-position{
