--- a/src/components/ui-components/button/button.scss
+++ b/src/components/ui-components/button/button.scss
@@ -1,7 +1,6 @@
 @import '../../../style/App.scss';
 
-.button {
-
+.button-div {
   .button-link {
     background-color: $main-color;
     border: 2px solid $main-color;
@@ -15,6 +14,10 @@
   .button-link:hover {
     border: 2px solid $main-color;
     background-color: transparent;
+    background: transparent;
     color: white;
+  }
+  a:hover{
+    background-color: transparent;
   }
 }
