--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -191,6 +191,9 @@ h1,h2,h3,h4,h5,h6 {
 .weight350{
   font-weight: 350;
 }
+.weight400 {
+  font-weight: 400;
+}
 .weight500 {
   font-weight: 500;
 }
@@ -381,6 +384,10 @@ p {
 
 @media screen and (max-width:500px) {
   
+  .some-heading-full-display{
+    margin: 5% 15%;
+    font-size: 2.2rem;
+  }
 }
 
 
