--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,14 +4,9 @@
   padding: 60px 0;
   color: white;
 }
-p{
-  text-align: center;
-}
 
-.download_cv_text{
-  margin-top: 1%;
-  display: flex;
-  text-align: left;
+p {
+  text-align: center;
 }
 
 .resume_dow_btn {
@@ -24,49 +19,42 @@ p{
   padding: 15px 30px;
   cursor: pointer;
   border-radius: 10px;
-  
-  a{
+  display: inline-flex;
+  align-items: center;
+  transition: 0.1s ease;
+
+  * {
+    color: black;
+    display: inline-flex;
+  }
+
+  a {
     font-size: 1.6rem;
     font-weight: 800;
-    color: black;
   }
+
+  .download_icon {
+    font-size: 25px;
+    margin-left: 3%;
+  }
+
 }
+
 .resume_dow_btn:hover {
   border: 2px solid $main-color;
   background-color: transparent;
-    a{
-      color: white;
-    }
+  transform: scale(1.05);
+
+  * {
+    color: white;
+  }
 }
 
-// .resume_dow_btn {
-//   background-color: $main-color;
-//   border: 2px solid $main-color;
-//   border-radius: 10px;
-//   width: min-content;
-//   height: min-content;
-//   margin-top: 2%; 
-//   padding: 10px 15px;
-//   cursor: pointer;
-  
-//   a{
-//     font-size: 1.4rem;
-//     font-weight: 800;
-//     color: black;
-//   }
-  
-// }
-// .resume_dow_btn:hover {
-//   background-color: transparent;
-//   a{
-//     color:white;
-//   }
-// }
-
-.about_box_li{
+.about_box_li {
   margin-top: 5%;
 }
-.about_box_icon{
+
+.about_box_icon {
   display: flex;
   color: white;
   font-size: 25px;
@@ -74,19 +62,20 @@ p{
   float: left;
 }
 
-.contact-box{
+.contact-box {
   margin: 10px;
   padding-left: 10%;
-  padding-right: 10%; 
+  padding-right: 10%;
 }
 
 
-.other-intrest-sec{
+.other-interest-sec {
   padding: 0% 5%;
   margin: 7% 0%;
 }
+
 @media screen and (max-width: 990px) {
-  .resume_dow_btn{
+  .resume_dow_btn {
     width: max-content;
     margin: auto;
     margin-top: 5%;
@@ -97,20 +86,24 @@ p{
   #about {
     text-align: center;
   }
-  .resume_dow_btn{
+
+  .resume_dow_btn {
     width: max-content;
     margin: auto;
     margin-top: 5%;
   }
-  .download_cv_text{
+
+  .download_cv_text {
     justify-content: center;
     text-align: center;
   }
-  .about_box_title{
+
+  .about_box_title {
     text-align: center;
     // position: fixed;
   }
-  .about_box_value{
+
+  .about_box_value {
     text-align: center;
     // position: fixed;
   }
